tests/ui/consts/const-eval/union-ice.stderr
error[E0080]: reading memory at ALLOC0[0x0..0x8], but memory is uninitialized at [0x4..0x8], and this operation requires initialized memory
  --> $DIR/union-ice.rs:14:33
   |
LL | const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                 ^^^^^^^^^^^^ evaluation of `FIELD3` failed here
   |
   = note: the raw bytes of the constant (size: 8, align: 8) {
               00 00 80 3f __ __ __ __                         │ ...?░░░░
           }

error[E0080]: reading memory at ALLOC1[0x0..0x8], but memory is uninitialized at [0x4..0x8], and this operation requires initialized memory
  --> $DIR/union-ice.rs:19:17
   |
LL |     b: unsafe { UNION.field3 },
   |                 ^^^^^^^^^^^^ evaluation of `FIELD_PATH` failed here
   |
   = note: the raw bytes of the constant (size: 8, align: 8) {
               00 00 80 3f __ __ __ __                         │ ...?░░░░
           }

error[E0080]: reading memory at ALLOC2[0x0..0x8], but memory is uninitialized at [0x4..0x8], and this operation requires initialized memory
  --> $DIR/union-ice.rs:31:18
   |
LL |         unsafe { UNION.field3 },
   |                  ^^^^^^^^^^^^ evaluation of `FIELD_PATH2` failed here
   |
   = note: the raw bytes of the constant (size: 8, align: 8) {
               00 00 80 3f __ __ __ __                         │ ...?░░░░
           }

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
